--- a/src/Components/Collection/Collection.css
+++ b/src/Components/Collection/Collection.css
@@ -1,18 +1,17 @@
-.collection_container {
+.collection_container .collection_row {
+  list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: center;
+  padding: 0;
   margin-top: 30px; }
-  .collection_container .collection_row {
+  .collection_container .collection_row .collection_item {
     display: flex;
-    flex-direction: row;
-    align-items: flex-start;
+    align-items: center;
     justify-content: center;
-    overflow-x: auto; }
-    .collection_container .collection_row ul {
-      list-style-type: none; }
-      .collection_container .collection_row ul li {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column; }
-        .collection_container .collection_row ul li img {
-          width: 53px;
-          height: 53px; }
+    flex-direction: column;
+    padding: 0 16px; }
+    .collection_container .collection_row .collection_item img {
+      width: 53px;
+      height: 53px; }
