--- a/src/Components/Collection/Collection.scss
+++ b/src/Components/Collection/Collection.scss
@@ -1,24 +1,22 @@
 .collection_container {
-  margin-top: 30px;
-
   .collection_row {
+    list-style-type: none;
     display: flex;
     flex-direction: row;
     align-items: flex-start;
     justify-content: center;
-    overflow-x: auto;
+    padding: 0;
+    margin-top: 30px;
 
-    ul {
-      list-style-type: none;
-      li {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        img {
-          width: 53px;
-          height: 53px;
-        }
+    .collection_item {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      padding: 0 16px;
+      img {
+        width: 53px;
+        height: 53px;
       }
     }
   }
